@@ -1,3 +1,5 @@
+- Refactor: Upgraded dependency of fenixedu-academic-core (Removed deprecated relation between PrecedentDegreeInformation and PersonalIngressionData)
+
 6.6.1 (26-02-2020)
 - Refactor: Upgraded dependency of fenixedu-academic-core 
 
